# victor-etl-pipeline

./: .gitignore  README.md  pyproject.toml  run_pipeline.py  schema.txt
data/: 19-07-2025_imdb_movies_series_df  20-07-2025_imdb_movies_series_df  First_df  Joined_data  Second_df  processed_data.parquet
etl_pipe/: data_transform.py  db_loader.py  web_scraper.py
logger/: logger.py
notebooks/: Joined_data.ipynb  scraped_data.ipynb
src/: data_transform.py  db_loader.py  web_scraper.py
tests/: test_db_loader.py  test_scraper.py  test_transform.py
