[project]
name = "src"
version = "0.1.0"
description = ""
authors = [
    {name = "Arowosegbe Victor",email = "iyanuvicky@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars (>=1.25.2,<2.0.0)",
    "fastapi (>=0.115.11,<0.116.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "pyarrow (>=19.0.1,<20.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
dotenv = "^0.9.9"


[tool.poetry.group.testing.dependencies]
pytest = "^8.3.5"

